Update portfolio with 6 new projects from CV

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <h2>Sobre mí</h2>
             <div class="about-content">
                 <p>Soy un profesional con experiencia en investigación, análisis de sostenibilidad y desarrollo de soluciones innovadoras. Mi pasión es trabajar en proyectos que generen impacto positivo en las organizaciones y el medio ambiente.</p>
-                <p style="margin-top: 1rem;">Cuento con habilidades en análisis de datos, investigación cualitativa, desarrollo web y gestión de proyectos. Me caracterizo por mi compromiso con la excelencia y la búsqueda continua de mejora.</p>
+                <p style="margin-top: 1rem;">Cuento con habilidades en análisis de Contenido, investigación cualitativa, desarrollo web y gestión de proyectos. Me caracterizo por mi compromiso con la excelencia y la búsqueda continua de mejora.</p>
             </div>
         </section>
 
@@ -307,7 +307,7 @@
             <h2>Mis Proyectos</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>🔬 Análisis de Sostenibilidad ESG</h3>
+                    <h3>🔬 Gestión de Redes y Marketing Visual</h3>
                     <p>Análisis integral de prácticas ambientales, sociales y de gobernanza en organizaciones corporativas, con enfoque en identificar oportunidades de mejora.</p>
                     <div class="tech-tags">
                         <span class="tag">Análisis ESG</span>
@@ -338,17 +338,17 @@
 
                 <div class="project-card">
                     <h3>🎨 Sector Artístico-Cultural</h3>
-                    <p>Marco contextual y análisis del sector artístico y cultural en América Latina, explorando dinámicas organizacionales y transformación digital.</p>
+                    <p>Marco contextual y análisis del sector artístico y cultural en América Latina, explorando dinámicas organizacionales y transformación Visual.</p>
                     <div class="tech-tags">
                         <span class="tag">Análisis Cultural</span>
                         <span class="tag">Contexto</span>
-                        <span class="tag">Transformación Digital</span>
+                        <span class="tag">Transformación Visual</span>
                     </div>
                 </div>
 
                 <div class="project-card">
-                    <h3>📊 Análisis de Datos Corporativos</h3>
-                    <p>Extracción y análisis de datos financieros y operacionales de empresas, con preparación de presentaciones ejecutivas y visualización de resultados.</p>
+                    <h3>📊 Análisis de Contenido Corporativos</h3>
+                    <p>Extracción y análisis de Contenido financieros y operacionales de empresas, con preparación de presentaciones ejecutivas y visualización de resultados.</p>
                     <div class="tech-tags">
                         <span class="tag">Data Analysis</span>
                         <span class="tag">Reporting</span>
@@ -358,11 +358,11 @@
 
                 <div class="project-card">
                     <h3>🌱 Auditoría Ambiental</h3>
-                    <p>Medición y evaluación del impacto ambiental, gestión de emisiones y prácticas de reciclaje en organizaciones con enfoque en cumplimiento normativo.</p>
+                    <p>Creación, administración y Programación de redes sociales UX/UIes. SQLs de contenido, campañas de pago, análisis de métricas y diseño visual para múltiples marcas., gestión de Community Manager y prácticas de reciclaje en organizaciones con enfoque en cumplimiento normativo.</p>
                     <div class="tech-tags">
                         <span class="tag">Auditoría</span>
-                        <span class="tag">Emisiones</span>
-                        <span class="tag">Compliance</span>
+                        <span class="tag">Community Manager</span>
+                        <span class="tag">Contenido</span>
                     </div>
                 </div>
             </div>
