--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <h2>Mis Proyectos</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>🔬 Gestión de Redes y Marketing Visual</h3>
+                    <h3>🔬 Gestión de Redes</h3>
                     <p>Análisis integral de prácticas ambientales, sociales y de gobernanza en organizaciones corporativas, con enfoque en identificar oportunidades de mejora.</p>
                     <div class="tech-tags">
                         <span class="tag">Análisis ESG</span>
@@ -317,7 +317,7 @@
                 </div>
 
                 <div class="project-card">
-                    <h3>⚡ Estudios de Energía Renovable</h3>
+                    <h3>⚡ Estudios</h3>
                     <p>Investigación sobre sistemas de energía limpia y renovable, análisis de modelos de suministro y evaluación de impacto ambiental.</p>
                     <div class="tech-tags">
                         <span class="tag">Energía Renovable</span>
