Update portfolio projects - partial replacements

--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
             <h2>Mis Proyectos</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>🔬 Gestión de Redes</h3>
-                    <p>Análisis integral de prácticas ambientales, sociales y de gobernanza en organizaciones corporativas, con enfoque en identificar oportunidades de mejora.</p>
+                    <h3>📱 Gestión de Redes y Marketing Digital</h3>
+                    <p>Creación, administración y crecimiento de redes sociales empresariales. Estrategias de contenido, campañas de pago, análisis de métricas y diseño visual para múltiples marcas.</p>
                     <div class="tech-tags">
-                        <span class="tag">Análisis ESG</span>
+                        <span class="tag">Marketing Digital</span>
                         <span class="tag">Sostenibilidad</span>
                         <span class="tag">Reporting</span>
                     </div>
