--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             min-height: 100vh;
         }
 
-        /* Encabezado */
+        /* HEADER */
         header {
-            background: rgba(0, 0, 0, 0.9);
+            background: rgba(0,0,0,0.9);
             color: white;
             padding: 1rem 0;
             position: fixed;
             width: 100%;
             top: 0;
             z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.4);
         }
 
         nav {
@@ -76,14 +76,11 @@
         .hero h1 {
             font-size: 3.8rem;
             margin-bottom: 1rem;
-            animation: fadeInDown 0.8s ease;
         }
 
         .hero p {
             font-size: 1.3rem;
-            margin-bottom: 2rem;
             opacity: 0.9;
-            animation: fadeInUp 0.8s ease;
         }
 
         .btn {
@@ -95,7 +92,7 @@
             border-radius: 6px;
             font-weight: bold;
             transition: 0.3s;
-            margin: 0 10px;
+            margin: 1rem 10px 0;
         }
 
         .btn:hover {
@@ -103,14 +100,14 @@
             box-shadow: 0 10px 20px rgba(0,0,0,0.25);
         }
 
-        /* Contenedor */
+        /* CONTENEDOR */
         .container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 0 2rem;
         }
 
-        /* Secciones */
+        /* SECCIONES */
         section {
             padding: 80px 2rem;
             background: white;
@@ -122,13 +119,12 @@
         section h2 {
             font-size: 2.5rem;
             margin-bottom: 2rem;
-            color: #222;
             border-bottom: 3px solid #0a5299;
             padding-bottom: 1rem;
             display: inline-block;
         }
 
-        /* SOBRE MÍ */
+        /* ABOUT */
         #about {
             text-align: center;
         }
@@ -140,7 +136,7 @@
             color: #555;
         }
 
-        /* PROYECTOS */
+        /* PROJECTS */
         .projects-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -157,13 +153,18 @@
 
         .project-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 12px 32px rgba(10, 82, 153, 0.25);
+            box-shadow: 0 12px 32px rgba(10,82,153,0.25);
         }
 
         .project-card h3 {
             color: #0a5299;
             margin-bottom: 1rem;
-            font-size: 1.5rem;
+        }
+
+        .project-image img {
+            width: 100%;
+            border-radius: 8px;
+            margin-bottom: 1rem;
         }
 
         .tech-tags {
@@ -214,25 +215,9 @@
             color: white;
             text-align: center;
             padding: 2rem;
-            margin-top: 4rem;
+            margin-top: 3rem;
         }
 
-        /* Animaciones */
-        @keyframes fadeInDown {
-            from { opacity:0; transform:translateY(-30px); }
-            to { opacity:1; transform:translateY(0); }
-        }
-
-        @keyframes fadeInUp {
-            from { opacity:0; transform:translateY(30px); }
-            to { opacity:1; transform:translateY(0); }
-        }
-
-        /* Responsive */
-        @media (max-width:768px) {
-            .hero h1 { font-size: 2.2rem; }
-            .hero p { font-size: 1rem; }
-        }
     </style>
 </head>
 
@@ -244,17 +229,16 @@
         <ul>
             <li><a href="#about">Sobre mí</a></li>
             <li><a href="#projects">Proyectos</a></li>
-            <li><a href="#contact">Contacto</a></li>
+            <li><a href="https://wa.me/5510299061" target="_blank">Contactarme</a></li>
         </ul>
     </nav>
 </header>
 
-
 <section class="hero">
     <h1>¡Bienvenido a mi Portafolio!</h1>
-    <p>Marketing · Fotografía · Tecnología · Redes Sociales</p>
+    <p>Marketing · Fotografía · Tecnología · Contenido Profesional</p>
     <a href="#projects" class="btn">Ver Proyectos</a>
-    <a href="#contact" class="btn">Contactarme</a>
+    <a href="https://wa.me/5510299061" class="btn" target="_blank">Contactarme</a>
 </section>
 
 
@@ -264,8 +248,7 @@
     <section id="about">
         <h2>Sobre mí</h2>
         <div class="about-content">
-            <p>Soy estudiante de Negocios Digitales con experiencia en marketing, contenido, fotografía, atención comercial y tecnología. He colaborado con empresas como Transport Oruat Logistic, Torino Glass y Salu Design Dental.</p>
-            <p style="margin-top: 1rem;">Desarrollo estrategias para crecimiento digital, diseño contenido visual, gestiono redes, realizo fotografía profesional y participo en proyectos de programación y UX.</p>
+            <p>Estudiante de Negocios Digitales con experiencia en marketing, contenido, fotografía, ventas y tecnología. Apasionado por crear contenido de valor, construir marcas personales y desarrollar estrategias digitales con enfoque profesional.</p>
         </div>
     </section>
 
@@ -275,49 +258,55 @@
 
         <div class="projects-grid">
 
+            <!-- CREACIÓN DE CONTENIDO Y PUBLICIDAD -->
             <div class="project-card">
-                <h3>📱 Gestión de Redes y Marketing Digital</h3>
-                <p>Creación de contenido, crecimiento de redes empresariales, campañas, diseño visual y análisis de métricas.</p>
-                <div class="tech-tags">
-                    <span class="tag">Marketing Digital</span>
-                    <span class="tag">Community Manager</span>
-                    <span class="tag">Contenido</span>
+                <div class="project-image">
+                    <img src="img/contenido.jpg" alt="Creación de contenido">
                 </div>
-            </div>
-
-            <div class="project-card">
-                <h3>🚛 Comunicación Digital — Transport Oruat Logistic</h3>
-                <p>Gestión de redes, diseño de contenido, fotografías, campañas y posicionamiento de marca del sector transporte.</p>
+                <h3>📱 Creación de Contenido y Publicidad Digital</h3>
+                <p>Desarrollo de contenido visual, fotografía, videos, publicidad digital, reels, diseño, branding y manejo de redes.</p>
                 <div class="tech-tags">
-                    <span class="tag">Logística</span>
-                    <span class="tag">Branding</span>
                     <span class="tag">Contenido</span>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <h3>🪟 Redes y Contenido — Torino Glass</h3>
-                <p>Diseño visual y contenido estratégico para una empresa de vidrio y aluminio. Fotos, reels y campañas.</p>
-                <div class="tech-tags">
-                    <span class="tag">Fotografía</span>
-                    <span class="tag">Diseño</span>
+                    <span class="tag">Publicidad</span>
                     <span class="tag">Social Media</span>
                 </div>
             </div>
 
+            <!-- MARCA PERSONAL -->
             <div class="project-card">
-                <h3>😁 Contenido para Salud — Salu Design Dental</h3>
-                <p>Contenido educativo, campañas digitales y diseño visual para clínica dental premium.</p>
+                <div class="project-image">
+                    <img src="img/marca-personal.jpg" alt="Marca personal">
+                </div>
+                <h3>🧕‍♂️ Emprendimiento de Marca Personal</h3>
+                <p>Construcción de mi marca personal con estrategias de contenido, storytelling, posicionamiento y presencia digital.</p>
                 <div class="tech-tags">
-                    <span class="tag">Salud</span>
-                    <span class="tag">Marketing</span>
-                    <span class="tag">Creatividad</span>
+                    <span class="tag">Marca Personal</span>
+                    <span class="tag">Branding</span>
+                    <span class="tag">Redes Sociales</span>
                 </div>
             </div>
 
+            <!-- VISIÓN Y LOGÍSTICA -->
             <div class="project-card">
-                <h3>📸 Fotografía Profesional — Estudio ZUVA</h3>
-                <p>Dirección creativa, sesiones fotográficas, edición y captura profesional en estudio.</p>
+                <div class="project-image">
+                    <img src="img/ventas.jpg" alt="Ventas comerciales">
+                </div>
+                <h3>🛍️ Vendedor Comercial — Visión y Logística</h3>
+                <p>Ventas, atención a clientes, operación en eventos, organización de punto de venta y estrategias comerciales.</p>
+                <div class="tech-tags">
+                    <span class="tag">Ventas</span>
+                    <span class="tag">Atención al Cliente</span>
+                    <span class="tag">Operación</span>
+                </div>
+            </div>
+
+            <!-- FOTOGRAFÍA PROFESIONAL -->
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="img/foto.jpg" alt="Fotografía profesional">
+                </div>
+                <h3>📸 Fotografía Profesional</h3>
+                <p>Dirección creativa, sesiones fotográficas, iluminación, edición profesional y proyectos comerciales.</p>
                 <div class="tech-tags">
                     <span class="tag">Fotografía</span>
                     <span class="tag">Edición</span>
@@ -325,9 +314,13 @@
                 </div>
             </div>
 
+            <!-- PROGRAMACIÓN / UX -->
             <div class="project-card">
-                <h3>💻 Desarrollo Web / UX / SQL — Krait</h3>
-                <p>Prácticas de programación, diseño responsivo, consultas SQL, UX e interfaces funcionales.</p>
+                <div class="project-image">
+                    <img src="img/code.jpg" alt="Programación y UX">
+                </div>
+                <h3>💻 Desarrollo Web / UX / SQL</h3>
+                <p>Prácticas en programación, diseño responsivo, bases de datos SQL, consultas y diseño UX/UI.</p>
                 <div class="tech-tags">
                     <span class="tag">Programación</span>
                     <span class="tag">UX/UI</span>
@@ -342,11 +335,16 @@
     <section id="contact">
         <h2>Contacto</h2>
         <div class="contact-info">
-            <p>¿Te interesa colaborar? ¡Estoy listo para nuevos proyectos!</p>
+            <p>¿Te interesa colaborar o necesitas contenido profesional? ¡Estoy disponible!</p>
+
+            <p style="margin-top: 1.5rem;">📞 <strong>55 1029 9061</strong><br>
+            ✉️ <strong>khalilplayerasmx@gmail.com</strong>
+            </p>
+
             <p style="margin-top: 1.5rem;">
-                <a href="https://github.com/KhalilG111" target="_blank">GitHub</a> |
-                <a href="https://linkedin.com" target="_blank">LinkedIn</a> |
-                <a href="mailto:khalitosnava111@gmail.com">Email</a>
+                <a href="https://wa.me/5510299061" target="_blank">WhatsApp</a> |
+                <a href="https://instagram.com" target="_blank">Instagram</a> |
+                <a href="mailto:khalilplayerasmx@gmail.com">Email</a>
             </p>
         </div>
     </section>
