--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
     <div class="hero-photo">
         <div class="hero-photo-inner">
-            <img src="img/foto-perfil.jpg" alt="Foto de Khalil Nava">
+            <img src="https://i.postimg.cc/sx1RH681/genai-image-9d5e3aa490604f8e930e28fb0937443b-1763536280-00001.jpg" alt="Foto de Khalil Nava">
         </div>
     </div>
 
