--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
         border-radius: 18px;
         position: relative;
         overflow: hidden;
+        text-align: center;
     }
 
     /* CONTACT BUTTON REWORK */
@@ -199,9 +200,10 @@
         font-weight: 600;
         font-size: 0.9rem;
         display: inline-block;
-        margin-right: 0.5rem;
+        margin: 0.3rem;
         transition: 0.3s ease;
         border: 1px solid rgba(255,255,255,0.35);
+        text-align: center;
     }
 
     .contact-pill:hover {
@@ -235,6 +237,27 @@
         height: 8px;
         background: white;
         border-radius: 50%;
+    }
+
+    /* BOTÓN DESCARGAR */
+    .download-btn {
+        display: inline-block;
+        padding: 0.9rem 2rem;
+        border-radius: 999px;
+        background: #0a5299;
+        color: white;
+        font-weight: 700;
+        font-size: 1rem;
+        letter-spacing: 0.5px;
+        box-shadow: 0 6px 18px rgba(0,0,0,0.18);
+        transition: 0.3s;
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .download-btn:hover {
+        transform: translateY(-3px);
+        background: #0c6dd4;
     }
 
 </style>
@@ -340,7 +363,7 @@
     <section id="skills">
         <h2 class="title">Habilidades</h2>
 
-        <div class="card">
+        <div class="card" style="text-align:center;">
             <div class="skill-pill"><span class="skill-icon"></span> Photoshop</div>
             <div class="skill-pill"><span class="skill-icon"></span> Illustrator</div>
             <div class="skill-pill"><span class="skill-icon"></span> Excel</div>
@@ -361,10 +384,19 @@
 
             <br>
 
-            <a href="https://wa.me/5510299061" target="_blank" class="contact-pill">WhatsApp</a>
-            <a href="mailto:khalilplayerasmx@gmail.com" class="contact-pill">Enviar correo</a>
-            <a href="https://instagram.com" target="_blank" class="contact-pill">Instagram</a>
+            <div style="text-align:center;">
+                <a href="https://wa.me/5510299061" target="_blank" class="contact-pill">WhatsApp</a>
+                <a href="mailto:khalilplayerasmx@gmail.com" class="contact-pill">Enviar correo</a>
+                <a href="https://instagram.com" target="_blank" class="contact-pill">Instagram</a>
+            </div>
         </div>
+    </section>
+
+    <!-- BOTÓN DE DESCARGA CENTRADO -->
+    <section style="text-align:center; margin-bottom:50px;">
+        <a href="https://drive.google.com/file/d/1CNq5AZd25v-Jpt-mCrsQggGXJg2sh10v/view?usp=sharing" download class="download-btn">
+            Éste es mi portafolío
+        </a>
     </section>
 
 </main>
